# spotify-mcp-server

./: Dockerfile  README.md  main.py  pyproject.toml
app/auth/: getauth.py  oauth.py  token.py
app/mcp/: mainmcp.py  mcp.py
app/mcp/tools/: read_follow.py  read_library.py  read_top.py  request.py
