[project]
name = "spotify-mcp-server"
version = "0.1.0"
description = "MCP server for Spotify"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.2",
    "llama-index>=0.13.0",
    "mcp[cli]>=1.12.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
